Added due to addition of activities

--- a/app-tracker-teacher/app/src/main/AndroidManifest.xml
+++ b/app-tracker-teacher/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AttendanceTrackerTeacher">
         <activity
+            android:name=".AcceptStudents"
+            android:exported="true" />
+        <activity
+            android:name=".CreateCourse"
+            android:exported="true" />
+        <activity
             android:name=".SingleClass"
             android:exported="true" />
         <activity android:name=".Classlist" />
