added some improvements in terms of intents/data helpers, etc.

--- a/app-tracker-teacher/app/src/main/AndroidManifest.xml
+++ b/app-tracker-teacher/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".CreateCourse"
             android:exported="true" />
         <activity
-            android:name=".SingleClass"
+            android:name=".SingleClassView"
             android:exported="true" />
         <activity android:name=".ClasslistView" />
         <activity android:name=".MainActivity">
