--- a/app-tracker-teacher/app/src/main/AndroidManifest.xml
+++ b/app-tracker-teacher/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mobdeve.s15.group1.attendancetrackerteacher">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,11 +9,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AttendanceTrackerTeacher">
         <activity
-<<<<<<< Updated upstream
             android:name=".RegistrationView"
-=======
+            android:exported="true" />
+
+        <activity
             android:name=".EditCourse"
->>>>>>> Stashed changes
             android:exported="true" />
         <activity
             android:name=".RegisterFormActivity"
@@ -35,13 +34,8 @@
             android:name=".SingleClassView"
             android:exported="true" />
         <activity android:name=".ClasslistView" />
-<<<<<<< Updated upstream
-        <activity android:name=".LoginView">
-=======
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.AttendanceTrackerTeacher.NoActionBar">
->>>>>>> Stashed changes
+
+        <activity android:name=".LoginView" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
