--- a/app-tracker-student/app/src/main/AndroidManifest.xml
+++ b/app-tracker-student/app/src/main/AndroidManifest.xml
@@ -10,6 +10,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AttendanceTrackerStudent">
         <activity
+            android:name=".SearchCourseActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SingleMeetingView"
+            android:exported="true" />
+        <activity
+            android:name=".SingleClassView"
+            android:exported="true" />
+        <activity
+            android:name=".EditProfile"
+            android:exported="true" />
+        <activity
+            android:name=".ClasslistView"
+            android:exported="true" />
+        <activity
+            android:name=".RegistrationView"
+            android:exported="true" />
+        <activity
             android:name=".LoginView"
             android:exported="true">
             <intent-filter>
@@ -18,6 +36,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
