--- a/app-tracker-teacher/app/build.gradle
+++ b/app-tracker-teacher/app/build.gradle
@@ -33,6 +33,7 @@ apply plugin: 'com.google.gms.google-services'
 
 dependencies {
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.3.1'
