--- a/app-tracker-teacher/app/src/main/AndroidManifest.xml
+++ b/app-tracker-teacher/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         <activity android:name=".ClasslistView"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".LoginView"
+            android:name=".LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
