added edit course name functionality

--- a/app-tracker-teacher/app/src/main/AndroidManifest.xml
+++ b/app-tracker-teacher/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".EditCourse"
+            android:name=".EditCourseActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
