added the initialization of views for students

--- a/app-tracker-student/app/build.gradle
+++ b/app-tracker-student/app/build.gradle
@@ -33,8 +33,11 @@ apply plugin: 'com.google.gms.google-services'
 
 dependencies {
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics'
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
