added edit profile, edit password, and loguot functionality

--- a/app-tracker-student/app/src/main/AndroidManifest.xml
+++ b/app-tracker-student/app/src/main/AndroidManifest.xml
@@ -12,29 +12,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AttendanceTrackerStudent">
         <activity
+            android:name=".EditAccountSecurityActivity"
+            android:exported="true" />
+        <activity
             android:name=".SearchCourseActivity"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SingleMeetingView"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SingleClassView"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
-            android:name=".EditProfile"
+            android:name=".EditProfileActivity"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".CourseListActivity"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".RegistrationActivity"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
