added search functionality

--- a/app-tracker-student/app/src/main/AndroidManifest.xml
+++ b/app-tracker-student/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".SingleClassView"
+            android:name=".SingleClassActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
