finished single course activity functionalities

--- a/app-tracker-student/app/src/main/AndroidManifest.xml
+++ b/app-tracker-student/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".SingleMeetingView"
+            android:name=".SingleMeetingActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
